--- a/mta.yaml
+++ b/mta.yaml
@@ -88,13 +88,13 @@ modules:
               TokenServiceKeyName: BlogService-uaa-key
               URL: ~{srv-api/srv-url}/service/BlogService
               sap.cloud.service: lcap.BlogService
-              sap.applicationdevelopment.actions.enabled: false
+              sap.applicationdevelopment.actions.enabled: true
               sap.build.usage: CAP
-              sap.processautomation.enabled: false
-              HTML5.DynamicDestination: false
-              WebIDEEnabled: false
-              MobileEnabled: false
-              AppgyverEnabled: false
+              sap.processautomation.enabled: true
+              HTML5.DynamicDestination: true
+              WebIDEEnabled: true
+              MobileEnabled: true
+              AppgyverEnabled: true
     build-parameters:
       no-source: true
     requires:
